--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -14,3 +14,81 @@ body {
   padding: 0;
   margin: 0;
 }
+
+/page header
+h1 {
+  font-size: 1.5rem;
+  font-weight: 700;
+  line-height: 2rem;
+
+  @include tablet {
+    font-size: 2.0625rem;
+    font-weight: 700;
+    line-height: 2.75rem;
+  }
+
+  @include desktop {
+    font-size: 2.0625rem;
+    font-weight: 700;
+    line-height: 2.75rem;
+  }
+}
+
+//section header
+h2 {
+  font-size: 0.75rem;
+  font-weight: 700;
+  line-height: 1.25rem;
+}
+
+//subheader
+h3 {
+  font-size: 0.8125rem;
+  font-weight: 700;
+  line-height: 1.125rem;
+
+  @include tablet {
+    font-size: 0.875rem;
+    font-weight: 700;
+    line-height: 1.375rem;
+  }
+
+  @include desktop {
+    font-size: 0.875rem;
+    font-weight: 700;
+    line-height: 1.375rem;
+  }
+}
+
+//body copy
+h4,
+p {
+  font-size: 0.8125rem;
+  font-weight: 400;
+  line-height: 1.125rem;
+
+  @include tablet {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+  }
+
+  @include desktop {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+  }
+}
+
+//labels&buttons
+h5 {
+  font-size: 0.625rem;
+  font-weight: 700;
+  line-height: 1.25rem;
+
+  @include tablet {
+    font-size: 0.75rem;
+  }
+
+  @include desktop {
+    font-size: 0.75rem;
+  }
+}
