--- a/src/pages/SignUpPage/SignUpPage.scss
+++ b/src/pages/SignUpPage/SignUpPage.scss
@@ -1,1 +1,15 @@
 @use "../../styles/partials/globals" as *;
+@use "../../styles/partials/mixins" as *;
+@use "../../styles/partials/variables" as *;
+
+.registration {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
+  &__card {
+    display: flex;
+    justify-content: center;
+    gap: 0.5rem;
+  }
+}
