adding validity checks to the form

--- a/src/components/RegistrationForm/RegistrationForm.scss
+++ b/src/components/RegistrationForm/RegistrationForm.scss
@@ -10,7 +10,17 @@
     &__container {
         width: 100%;
         display: flex;
-        gap: 1rem;
+        justify-content: space-between;
+    }
+
+    &__subcontainer {
+        display: flex;
+        flex-direction: column;
+    }
+
+    &__input {
+        width: 100%;
+        box-sizing: border-box;
     }
 
     &__card {
@@ -18,11 +28,12 @@
         flex-direction: column;
     }
 
-    &__input {
-        width: 100%;
-    }
-
     &__label {
         text-align: left;
+    }
+
+    &__btn {
+        display: flex;
+        gap: 1rem;
     }
 }
