added some styling

--- a/src/components/RegistrationForm/RegistrationForm.scss
+++ b/src/components/RegistrationForm/RegistrationForm.scss
@@ -35,5 +35,7 @@
     &__btn {
         display: flex;
         gap: 1rem;
+        align-items: center;
+        justify-content: space-evenly;
     }
 }
