--- a/src/styles/partials/_globals.scss
+++ b/src/styles/partials/_globals.scss
@@ -18,7 +18,7 @@ body {
 
 //page header
 h1 {
-  font-family: "Cardo";
+  font-family: "Archivo";
   font-size: 1.5rem;
   font-weight: 700;
   line-height: 2rem;
