--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -14,11 +14,16 @@
 
     &__logo {
         width: 2.75rem;
-        height: 1.375rem;
+        height: 100%;
     }
 
     &__hamburger {
         width: 2.625rem;
         color: $background-eerieblack;
+    }
+
+    &__img {
+        width: 100%;
+        height: 2rem;
     }
 }
