--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -3,27 +3,30 @@
 @use "../../styles/partials/variables" as *;
 @use "../../styles/partials/typography" as *;
 
-
 .header {
-    display: flex;
-    padding: 1rem;
-    border-bottom: 1px solid $secondary-slategray;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  padding: 1rem;
+  border-bottom: 1px solid $secondary-slategray;
+  justify-content: space-between;
+  align-items: center;
 
+  &__logo {
+    width: 3rem;
+    height: 100%;
+  }
 
-    &__logo {
-        width: 2.75rem;
-        height: 100%;
-    }
+  &__hamburger {
+    width: 2.625rem;
+    color: $background-eerieblack;
+  }
 
-    &__hamburger {
-        width: 2.625rem;
-        color: $background-eerieblack;
-    }
-
-    &__img {
-        width: 100%;
-        height: 2rem;
-    }
+  &__img {
+    width: 2rem;
+    height: 2rem;
+    background-color: $secondary-slategray;
+    box-sizing: border-box;
+    border-radius: 50%;
+    object-fit: cover;
+    object-position: 0;
+  }
 }
