--- a/src/components/ContactForm/ContactForm.scss
+++ b/src/components/ContactForm/ContactForm.scss
@@ -2,3 +2,22 @@
 @use "../../styles/partials/mixins" as *;
 @use "../../styles/partials/variables" as *;
 @use "../../styles/partials/typography" as *;
+
+.contactForm {
+    padding: 2rem;
+
+    &__container {
+        display: flex;
+        flex-direction: column;
+    }
+
+    &__subcontainer {
+        display: flex;
+        flex-direction: column;
+    }
+
+    &__text {
+        width: 100%;
+        height: 5rem;
+    }
+}
