added the buttons in the contact form

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -18,6 +18,10 @@
   &__hamburger {
     width: 2.625rem;
     color: $background-eerieblack;
+
+    position: absolute;
+    right: 2%;
+    cursor: pointer;
   }
 
   &__img {
