--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -4,8 +4,15 @@
 @use "../../styles/partials/typography" as *;
 
 .navBar {
+    background-color: $background-nobel;
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
+    align-items: center;
     justify-content: space-evenly;
+    position: absolute;
+    border-top: 3px solid $primary-Peachcrayon;
+    top: 13vh;
+    right: 0;
+    height: 25vh;
+    width: 100%;
 }
