--- a/src/components/Buttons/Buttons.scss
+++ b/src/components/Buttons/Buttons.scss
@@ -30,8 +30,8 @@
   }
 
   &__secondary {
-    width: auto;
-    min-width: 4.4375rem;
+    width: 100%;
+    // min-width: 4.4375rem;
     height: 2.25rem;
     color: $secondary-slategray;
     padding: 0.5rem 1rem;
@@ -56,8 +56,8 @@
   }
 
   &__submit {
-    width: auto;
-    min-width: 4.4375rem;
+    width: 100%;
+    // min-width: 4.4375rem;
     height: 2.25rem;
     color: $primary-Timberwolf;
     background-color: $background-gunmetal;
