--- a/src/components/ContactForm/ContactForm.scss
+++ b/src/components/ContactForm/ContactForm.scss
@@ -4,20 +4,29 @@
 @use "../../styles/partials/typography" as *;
 
 .contactForm {
-    padding: 2rem;
+  padding: 2rem;
 
-    &__container {
-        display: flex;
-        flex-direction: column;
-    }
+  &__container {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+  }
 
-    &__subcontainer {
-        display: flex;
-        flex-direction: column;
-    }
+  &__subcontainer {
+    display: flex;
+    flex-direction: column;
+    gap: 0.1rem;
+  }
 
-    &__text {
-        width: 100%;
-        height: 5rem;
-    }
+  &__text {
+    width: 100%;
+    height: 5rem;
+  }
+
+  &__btn {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
 }
