--- a/src/components/RegistrationForm/RegistrationForm.scss
+++ b/src/components/RegistrationForm/RegistrationForm.scss
@@ -3,39 +3,54 @@
 @use "../../styles/partials/variables" as *;
 
 .form {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+
+  &__wrapper {
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
+  }
 
-    &__container {
-        width: 100%;
-        display: flex;
-        justify-content: space-between;
-    }
+  &__container {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+  }
 
-    &__subcontainer {
-        display: flex;
-        flex-direction: column;
-    }
+  &__subcontainer {
+    display: flex;
+    flex-direction: column;
+    gap: 0.1rem;
+  }
 
-    &__input {
-        width: 100%;
-        box-sizing: border-box;
-    }
+  &__label {
+    color: $secondary-slategray;
+    font-size: 0.625rem;
+    font-weight: 400;
+    line-height: 1.25rem;
+  }
 
-    &__card {
-        display: flex;
-        flex-direction: column;
-    }
+  &__input {
+    width: 100%;
+    height: 1.5rem;
+    box-sizing: border-box;
+  }
 
-    &__label {
-        text-align: left;
-    }
+  &__card {
+    display: flex;
+    flex-direction: column;
+    gap: 0.1rem;
+  }
 
-    &__btn {
-        display: flex;
-        gap: 1rem;
-        align-items: center;
-        justify-content: space-evenly;
-    }
+  &__label {
+    text-align: left;
+  }
+
+  &__btn {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+  }
 }
