--- a/src/pages/SignUpPage/SignUpPage.scss
+++ b/src/pages/SignUpPage/SignUpPage.scss
@@ -6,6 +6,11 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  padding: 2rem;
+
+  &__container {
+    padding: 0.5rem;
+  }
 
   &__card {
     display: flex;
