--- a/src/components/ContactSection/ContactSection.scss
+++ b/src/components/ContactSection/ContactSection.scss
@@ -6,16 +6,35 @@
 .section {
     &__contact {
         height: 14rem;
-        background-image: url(../../assets/images/alvin-mahmudov-9_XfcBxf_uo-unsplash.jpg);
-        background-repeat: no-repeat;
-        background-size: cover;
+
+        @include tablet {
+            height: 25rem;
+        }
     }
 
     &__container {
+        background-image: url(../../assets/images/alvin-mahmudov-9_XfcBxf_uo-unsplash.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        box-sizing: border-box;
+        object-fit: cover;
         display: flex;
         flex-direction: column;
         gap: 1rem;
         padding: 2rem;
         align-items: center;
+
+        @include tablet {
+            height: 100%;
+            gap: 2.5rem;
+            justify-content: center;
+        }
+    }
+
+    &__description {
+        @include tablet {
+            box-sizing: border-box;
+            width: 80%;
+        }
     }
 }
