--- a/src/components/Gallery/Gallery.scss
+++ b/src/components/Gallery/Gallery.scss
@@ -4,23 +4,29 @@
 @use "../../styles/partials/typography" as *;
 
 .gallery {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
+
+  @include tablet {
+    box-sizing: border-box;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  &__img {
+    width: 100%;
+    height: 15.625rem;
+    object-fit: cover;
+    filter: grayscale(100%);
+    transition: filter 0.5s ease;
 
     @include tablet {
-        box-sizing: border-box;
-        flex-direction: row;
-        flex-wrap: wrap;
+      width: 12rem;
+      height: 12.5rem;
     }
 
-    &__img {
-        width: 100%;
-        height: 15.625rem;
-        object-fit: cover;
-
-        @include tablet {
-            width: 12rem;
-            height: 12.5rem;
-        }
+    &:hover {
+      filter: grayscale(0%);
     }
+  }
 }
