--- a/src/components/PhotographersSection/PhotographersSection.scss
+++ b/src/components/PhotographersSection/PhotographersSection.scss
@@ -4,23 +4,54 @@
 @use "../../styles/partials/typography" as *;
 
 .photographer {
-    background-color: $secondary-alabaster;
+    // background-color: $background-gunmetal;
+
+    @include tablet {
+        padding: 2rem 0;
+    }
 
     &__container {
         display: flex;
         flex-direction: column;
         gap: 0.5rem;
+
+        @include tablet {
+            flex-direction: row;
+        }
     }
 
     &__subcontainer {
         display: flex;
         flex-direction: column;
         align-items: flex-end;
+
+        @include tablet {
+            position: relative;
+            flex-direction: row;
+        }
     }
 
     &__photo {
         width: 100%;
         height: 100%;
+
+        @include tablet {
+            object-fit: cover;
+            display: flex;
+            flex: 2;
+        }
+    }
+
+    &__name {
+        color: $primary-Timberwolf;
+
+        @include tablet {
+            position: absolute;
+            bottom: 1rem;
+            right: 1rem;
+            display: flex;
+            flex: 1;
+        }
     }
     
     &__card {
@@ -28,10 +59,18 @@
         flex-direction: column;
         gap: 1rem;
         padding: 1rem;
+
+        @include tablet {
+            padding: 2.5rem 0rem 0 2.5rem;
+        }
     }
 
     &__description {
         color: $primary-CharcoalBlue;
+
+        @include tablet {
+            padding-right: 2rem;
+        }
     }
 
     &__work {
