--- a/src/components/RegistrationForm/RegistrationForm.scss
+++ b/src/components/RegistrationForm/RegistrationForm.scss
@@ -27,7 +27,7 @@
   }
 
   &__label {
-    color: $primary-Timberwolf;
+    color: $primary-CharcoalBlue;
     font-size: 0.625rem;
     font-weight: 400;
     line-height: 1.25rem;
@@ -35,8 +35,47 @@
 
   &__input {
     width: 100%;
-    height: 1.5rem;
+    height: 2.25rem;
+    background: url();
     box-sizing: border-box;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+    outline: none;
+    padding-left: 0.3rem;
+
+    &::placeholder {
+      @include placeholder-style;
+    }
+
+    &:focus {
+      border: 1px solid $primary-CharcoalBlue;
+      outline: none;
+    }
+
+    &--select {
+      color: $primary-Timberwolf;
+      appearance: none;
+      background: url(../../assets/icons/arrow_drop_down_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.svg);
+      background-repeat: no-repeat;
+      background-position: right 1rem center;
+      background-size: 1rem;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      padding: 0.5rem 1rem;
+
+      &:hover,
+      &:focus {
+        color: #ffffff;
+        border-color: #ffffff;
+        box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+      }
+    }
+
+    &--error {
+      color: $error;
+      font-weight: 600;
+      border: 1px solid $error;
+    }
   }
 
   &__card {
