--- a/src/pages/LogInPage/LogInPage.scss
+++ b/src/pages/LogInPage/LogInPage.scss
@@ -4,39 +4,52 @@
 @use "../../styles/partials/typography" as *;
 
 .login {
+  width: 100%;
   height: 100vh;
   background-image: url(../../assets/images/katerina-kerdi--YiJvbfNDqk-unsplash.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   padding: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  @include tablet {
+    justify-content: flex-start;
+  }
+
+  @include desktop {
+    justify-content: flex-start;
+  }
 
   &__container {
-    background-color: rgba(35, 42, 55, 0.7);
-    border-radius: 20px;
+    width: 100%;
+    background: rgba(255, 255, 255, 0.3);
+    text-align: center;
     display: flex;
     flex-direction: column;
-    gap: 1rem;
-    padding: 2rem;
     position: relative;
-    top: 4rem;
+    gap: 1rem;
+    padding: 1.25rem 1.875rem;
+    border-radius: 15px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(10px);
 
     @include tablet {
       width: 38%;
       padding: 2rem 3rem 2rem 3rem;
-      position: relative;
-      top: 2rem;
       left: 3rem;
     }
 
     @include desktop {
       width: 30%;
       padding: 4rem 3rem 4rem 3rem;
-      top: 12rem;
       left: 7rem;
     }
   }
 
   &__header {
-    color: $primary-Timberwolf;
+    color: $primary-CharcoalBlue;
   }
 }
