--- a/src/pages/PortfolioPage/PortfolioPage.scss
+++ b/src/pages/PortfolioPage/PortfolioPage.scss
@@ -4,42 +4,103 @@
 @use "../../styles/partials/typography" as *;
 
 .portfolio {
-    &__hero {
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-    }
+  &__hero {
+    background-color: $background-gunmetal;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    position: relative;
 
-    &__feature {
-        width: 100%;
-        height: 100%;
+    @include tablet {
+      flex-direction: row;
     }
+  }
 
-    &__pitch {
-        padding: 1rem;
-    }
+  &__feature {
+    width: 100%;
+    height: 100%;
 
-    &__work {
-        display: flex;
-        flex-direction: column;
-        padding: 1rem;
-        align-items: center;
+    @include tablet {
+      width: 50%;
+      height: 27rem;
+      display: flex;
+      object-fit: cover;
+      object-position: 0rem -8rem;
+      position: absolute;
+      right: 0rem;
     }
+  }
 
-    &__card {
-        display: flex;
-        flex-direction: column;
-        padding: 2rem;
-    }
+  &__pitch {
+    color: $secondary-alabaster;
+    padding: 1rem;
 
-    &__img {
-        box-sizing: border-box;
-        width: 100%;
+    @include tablet {
+      width: 40%;
+      height: 25rem;
+      display: flex;
+      padding: 1rem 3rem;
+      align-items: center;
     }
+  }
+
+  &__work {
+    background-color: $secondary-alabaster;
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+    align-items: center;
+
+    @include tablet {
+      padding: 1.5rem;
+    }
+  }
+
+  &__title {
+    color: $primary-CharcoalBlue;
+    border-bottom: 2px solid $secondary-slategray;
+    padding: 1.5rem 7.5rem;
+  }
+
+  &__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    @include tablet {
+      flex-direction: row;
+    }
+  }
+
+  &__card {
+    width: 70%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+
+    @include tablet {
+      width: 100%;
+      height: 100%;
+      padding: 2rem;
+    }
+  }
+
+  &__img {
+    box-sizing: border-box;
+    width: 100%;
     
-    &__subcard {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
+
+    @include tablet {
+      height: 15rem;
+      object-fit: cover;
     }
+  }
+
+  &__subcard {
+    color: $secondary-slategray;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
 }
