--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -18,3 +18,10 @@
   border: 1px solid $background-eerieblack;
   cursor: pointer;
 }
+
+@mixin placeholder-style {
+  color: $primary-Timberwolf;
+  font-family: 'Montserrat';
+  font-size: 0.75rem;
+  padding-left: 0.2rem;
+}
