--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -22,3 +22,5 @@ $secondary-deer: #C58C5C;
 $background-gunmetal: #232A37;
 $background-nobel: #A79E9C;
 $background-eerieblack: #161616;
+
+$error: red;
