--- a/src/components/RegistrationForm/RegistrationForm.scss
+++ b/src/components/RegistrationForm/RegistrationForm.scss
@@ -27,7 +27,7 @@
   }
 
   &__label {
-    color: $primary-CharcoalBlue;
+    color: $primary-Timberwolf;
     font-size: 0.625rem;
     font-weight: 400;
     line-height: 1.25rem;
@@ -48,7 +48,7 @@
     }
 
     &:focus {
-      border: 1px solid $primary-CharcoalBlue;
+      border: 1px solid $primary-Peachcrayon;
       outline: none;
     }
 
