--- a/src/pages/ContactPage/ContactPage.scss
+++ b/src/pages/ContactPage/ContactPage.scss
@@ -2,3 +2,70 @@
 @use "../../styles/partials/mixins" as *;
 @use "../../styles/partials/variables" as *;
 @use "../../styles/partials/typography" as *;
+
+.contact {
+    display: flex;
+
+    &__section {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    gap: 2rem;
+    justify-content: center;
+    // align-items: center;
+    background-color: $background-gunmetal;
+    }
+
+    &__container {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    &__card {
+        position: relative;
+        text-align: center;
+        background: rgba(255, 255, 255, 0.3);
+        padding: 1.25rem 1.875rem;
+        border: 1px solid rgba(255, 255, 255, 0.3);
+        border-radius: 15px;
+        box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+        overflow: hidden;
+    }
+
+    &__title {
+        position: relative;
+        font-size: 2rem;
+        font-weight: bold;
+        color: $background-gunmetal; /* Make text transparent */
+        // mix-blend-mode: screen; /* Blending mode to cut out the text */
+        z-index: 1;
+        background: inherit;
+        background-clip: text;
+        // mix-blend-mode: multiply;
+    
+        &::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: inherit; /* Inherit background from parent */
+            filter: blur(10px); /* Apply the same blur */
+            z-index: -1;
+        }
+    }
+
+    &__feature {
+        display: flex;
+        flex: 1;
+    }
+
+    &__img {
+        box-sizing: border-box;
+        width: 100%;
+        height: 100%;
+    }
+}
