--- a/src/pages/LogInPage/LogInPage.scss
+++ b/src/pages/LogInPage/LogInPage.scss
@@ -6,7 +6,7 @@
 .login {
   width: 100%;
   height: 100vh;
-  background-image: url(../../assets/images/katerina-kerdi--YiJvbfNDqk-unsplash.jpg);
+  background-image: url(../../assets/images/pawel-czerwinski-prMn9KINLtI-unsplash.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   padding: 2rem;
@@ -33,7 +33,7 @@
     padding: 1.25rem 1.875rem;
     border-radius: 15px;
     border: 1px solid rgba(255, 255, 255, 0.3);
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 30px rgba(255, 255, 255, 0.3);
     backdrop-filter: blur(10px);
 
     @include tablet {
@@ -50,6 +50,6 @@
   }
 
   &__header {
-    color: $primary-CharcoalBlue;
+    color: $primary-Timberwolf;
   }
 }
