--- a/src/pages/DashboardPage/DashboardPage.scss
+++ b/src/pages/DashboardPage/DashboardPage.scss
@@ -3,10 +3,68 @@
 @use "../../styles/partials/variables" as *;
 @use "../../styles/partials/typography" as *;
 
-.failedAuth {
-    background: url(../../assets/images/);
-    &__container {
-        display: flex;
-        flex-direction: column;
+.dashboard {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 1rem;
+  background: url(../../assets/images/sumner-mahaffey-7Y0NshQLohk-unsplash.jpg);
+
+  &__container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    gap: 1rem;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  &__card {
+    background: rgba(255, 255, 255, 0.3);
+    padding: 1.25rem 1.875rem;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 15px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(10px);
+  }
+
+  &__title {
+    color: $primary-CharcoalBlue;
+  }
+
+  &__user {
+    color: $primary-CharcoalBlue;
+  }
+
+  &__description {
+    color: $primary-CharcoalBlue;
+  }
+
+  &__reset {
+    width: auto;
+    // min-width: 4.4375rem;
+    height: 2rem;
+    color: $secondary-deer;
+    padding: 0.2rem 1rem;
+    border: 1px solid $secondary-deer;
+    border-radius: 10px;
+
+    &:hover {
+      color: $primary-Peachcrayon;
+      border: 1px solid $secondary-deer;
+      cursor: pointer;
     }
+
+    @include tablet {
+      width: 9rem;
+      max-width: 10rem;
+      height: 2.375rem;
+    }
+
+    @include desktop {
+      width: 7.8125rem;
+      max-width: 8rem;
+      height: 2.375rem;
+    }
+  }
 }
