--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -14,6 +14,7 @@ $desktop-max-width: 1920px;
 $primary-CharcoalBlue: #354252;
 $primary-Timberwolf: #EAE3DF;
 $primary-Peachcrayon: #F9B17A;
+$primary-white: #ffffff;
 
 $secondary-slategray: #76838F;
 $secondary-alabaster: #F2EFED;
