--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -25,3 +25,13 @@
   font-size: 0.75rem;
   padding-left: 0.2rem;
 }
+
+@mixin selected-state {
+  width: 100%;
+  max-width: 10.3125rem;
+  color: $primary-Peachcrayon;
+  padding: 0.5rem 0;
+  background-color: $primary-CharcoalBlue;
+  border-bottom: 1px solid $primary-CharcoalBlue;
+  border-radius: 20px;
+}
