--- a/src/components/PhotoUpload/PhotoUpload.scss
+++ b/src/components/PhotoUpload/PhotoUpload.scss
@@ -7,5 +7,13 @@
     &__img {
         box-sizing: border-box;
         width: 100%;
+
+        &--landscape {
+            object-position: center;
+        }
+
+        &--portrait {
+            object-position: center 8rem;
+        }
     }
 }
