--- a/src/components/EditGallery/EditGallery.scss
+++ b/src/components/EditGallery/EditGallery.scss
@@ -2,3 +2,16 @@
 @use "../../styles/partials/mixins" as *;
 @use "../../styles/partials/variables" as *;
 @use "../../styles/partials/typography" as *;
+
+.editGallery {
+  padding: 3rem;
+
+  &__form {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 2.5rem;
+    background-color: $secondary-alabaster;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.5);
+  }
+}
