--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -4,28 +4,57 @@
 @use "../../styles/partials/typography" as *;
 
 .hero {
-    padding: 1rem;
+    display: flex;
+    padding: 3rem;
+    justify-content: center;
+
+    @include tablet {
+        padding: 6rem;
+    }
+
+    @include desktop {
+        padding: 10rem 8rem;
+    }
 
     &__container {
-        background-color: rgba(234, 227, 223, 0.8);
+        background-color: rgba(234, 227, 223, 0.9);
         display: flex;
         flex-direction: column;
         gap: 2rem;
         padding: 2rem;
         border-radius: 20px;
+        align-items: center;
+
+        @include tablet {
+            width: 80%;
+        }
+
+        @include desktop {
+            width: 60%;
+            padding-bottom: 4rem;
+        }
     }
 
     &__card {
         display: flex;
         flex-direction: column;
         gap: 1rem;
+
+        @include desktop {
+            width: 75%;
+            gap: 1.5rem;
+            padding-top: 3rem;
+            padding-bottom: 1rem;
+        }
     }
 
     &__title {
         color: $primary-CharcoalBlue;
+        text-align: center;
     }
 
     &__description {
         color: $primary-CharcoalBlue;
+        text-align: justify;
     }
 }
