--- a/src/components/EditAbout/EditAbout.scss
+++ b/src/components/EditAbout/EditAbout.scss
@@ -2,3 +2,66 @@
 @use "../../styles/partials/mixins" as *;
 @use "../../styles/partials/variables" as *;
 @use "../../styles/partials/typography" as *;
+
+.editAbout {
+  padding: 3rem;
+
+  &__form {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 2.5rem;
+    background-color: $secondary-alabaster;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.5);
+  }
+
+  &__container {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+
+  &__input {
+    width: 100%;
+    height: 2.5rem;
+    background: url();
+    box-sizing: border-box;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+    outline: none;
+    padding-left: 0.3rem;
+
+    &::placeholder {
+      @include placeholder-style;
+      padding: 0.5rem;
+      color: $secondary-slategray;
+    }
+
+    &:focus {
+      border: 1px solid $primary-Peachcrayon;
+      outline: none;
+    }
+  }
+
+  &__description {
+    width: 100%;
+    height: 6rem;
+    background: url();
+    box-sizing: border-box;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+    outline: none;
+    padding-left: 0.3rem;
+
+    &::placeholder {
+      @include placeholder-style;
+      padding: 0.5rem;
+      color: $secondary-slategray;
+    }
+
+    &:focus {
+      border: 1px solid $primary-Peachcrayon;
+      outline: none;
+    }
+  }
+}
