--- a/src/components/PortfolioContactSection/PortfolioContactSection.scss
+++ b/src/components/PortfolioContactSection/PortfolioContactSection.scss
@@ -3,7 +3,9 @@
 @use "../../styles/partials/variables" as *;
 @use "../../styles/partials/typography" as *;
 
-.section {
+.connect {
+    position: relative;
+
     &__contact {
         height: 14rem;
 
@@ -13,15 +15,12 @@
     }
 
     &__container {
-        background-image: url(../../assets/images/alvin-mahmudov-9_XfcBxf_uo-unsplash.jpg);
-        background-repeat: no-repeat;
-        background-size: cover;
         box-sizing: border-box;
         object-fit: cover;
         display: flex;
         flex-direction: column;
         gap: 1rem;
-        padding: 2rem;
+        // padding: 2rem;
         align-items: center;
 
         @include tablet {
@@ -31,7 +30,44 @@
         }
     }
 
+    &__background {
+        box-sizing: border-box;
+        width: 100%;
+        height: 100%;
+    }
+
+    &__card {
+        width: 90%;
+        box-sizing: border-box;
+        background: rgba(255, 255, 255, 0.3);
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 1rem;
+        padding: 1.25rem 1.875rem;
+        border-radius: 15px;
+        border: 1px solid rgba(255, 255, 255, 0.3);
+        box-shadow: 0 4px 30px rgba(255, 255, 255, 0.3);
+        backdrop-filter: blur(10px);
+        position: absolute;
+        top: 4rem;
+        left: 1rem;
+        z-index: 1;
+    
+        @include tablet {
+          padding: 2rem 3rem 2rem 3rem;
+          left: 2.5rem;
+        }
+    
+        @include desktop {
+          padding: 4rem 3rem 4rem 3rem;
+          left: 4rem;
+        }
+    }
+
     &__description {
+        text-align: justify;
+
         @include tablet {
             box-sizing: border-box;
             width: 80%;
