--- a/src/pages/EditPortfolioPage/EditPortfolioPage.scss
+++ b/src/pages/EditPortfolioPage/EditPortfolioPage.scss
@@ -2,3 +2,9 @@
 @use "../../styles/partials/mixins" as *;
 @use "../../styles/partials/variables" as *;
 @use "../../styles/partials/typography" as *;
+
+.editPortfolio {
+    &__title{
+        padding: 1rem 2rem 0 2rem;
+    }
+}
