--- a/src/components/PhotographerAbout/PhotographerAbout.scss
+++ b/src/components/PhotographerAbout/PhotographerAbout.scss
@@ -21,6 +21,7 @@
     }
 
     &__subcontainer {
+        position: relative;
         display: flex;
         flex-direction: column;
         align-items: flex-end;
@@ -44,6 +45,9 @@
 
     &__name {
         color: $primary-Timberwolf;
+        position: absolute;
+        right: 1rem;
+        bottom: 1rem;
 
         @include tablet {
             position: absolute;
@@ -51,6 +55,15 @@
             right: 1rem;
             display: flex;
             flex: 1;
+        }
+    }
+
+    &__link {
+        box-sizing: border-box;
+        width: 23rem;  
+
+        @include desktop {
+            width: 28rem;
         }
     }
     
