--- a/src/pages/LogInPage/LogInPage.scss
+++ b/src/pages/LogInPage/LogInPage.scss
@@ -4,7 +4,6 @@
 @use "../../styles/partials/typography" as *;
 
 .login {
-  width: 100%;
   height: 100vh;
   background-image: url(../../assets/images/b-pawel-czerwinski-prMn9KINLtI-unsplash.jpg);
   background-repeat: no-repeat;
@@ -30,7 +29,7 @@
     flex-direction: column;
     position: relative;
     gap: 1rem;
-    padding: 1.25rem 1.875rem;
+    padding: 2rem 1.875rem;
     border-radius: 15px;
     border: 1px solid rgba(255, 255, 255, 0.3);
     box-shadow: 0 4px 30px rgba(255, 255, 255, 0.3);
@@ -38,18 +37,36 @@
 
     @include tablet {
       width: 38%;
-      padding: 2rem 3rem 2rem 3rem;
+      padding: 4rem 3rem;
       left: 3rem;
     }
 
     @include desktop {
       width: 30%;
-      padding: 4rem 3rem 4rem 3rem;
+      padding: 5rem 4rem;
       left: 7rem;
     }
   }
 
-  &__header {
+  &__card {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+
+  &__subcard {
+    display: flex;
+    justify-content: center;
+    gap: 0.5rem;
+  }
+
+  &__header,
+  &__description {
     color: $primary-Timberwolf;
+  }
+
+  &__link {
+    color: $primary-Peachcrayon;
+    text-decoration: none;
   }
 }
