populated the photographer's page with list of photographers, styled edit portfolio and portfolio page for all media queries

--- a/src/components/PortfolioGallery/PortfolioGallery.scss
+++ b/src/components/PortfolioGallery/PortfolioGallery.scss
@@ -25,6 +25,11 @@
       height: 12.5rem;
     }
 
+    @include desktop {
+      width: 20rem;
+      height: 20rem;
+    }
+
     &:hover {
       filter: grayscale(0%);
     }
