--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -5,6 +5,7 @@
 
 .homepage {
   &__header {
+    height: 100vh;
     background-image: url(../../assets/images/b-jason-leung-UMncYEfO9-U-unsplash.jpg);
     background-repeat: no-repeat;
     background-size: cover;
