--- a/src/components/EditGallery/EditGallery.scss
+++ b/src/components/EditGallery/EditGallery.scss
@@ -4,7 +4,22 @@
 @use "../../styles/partials/typography" as *;
 
 .editGallery {
-  padding: 3rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.75rem;
+  padding: 1.5rem;
+
+  @include tablet {
+    padding: 1.5rem 3rem;
+  }
+
+  @include desktop {
+    padding: 2rem 4.5rem;
+  }
+
+  &__title {
+    color: $primary-CharcoalBlue;
+  }
 
   &__form {
     display: flex;
