--- a/src/components/EditWork/EditWork.scss
+++ b/src/components/EditWork/EditWork.scss
@@ -4,47 +4,62 @@
 @use "../../styles/partials/typography" as *;
 
 .editWork {
-    padding: 3rem;
-  
-    &__form {
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-      padding: 2.5rem;
-      background-color: $secondary-alabaster;
-      box-shadow: 0 4px 30px rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: column;
+  gap: 0.75rem;
+  padding: 1.5rem;
+
+  @include tablet {
+    padding: 1.5rem 3rem;
+  }
+
+  @include desktop {
+    padding: 2rem 4.5rem;
+  }
+
+  &__title {
+    color: $primary-CharcoalBlue;
+  }
+
+  &__form {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 2.5rem;
+    background-color: $secondary-alabaster;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.5);
+  }
+
+  &__container {
+    display: flex;
+    flex-direction: column;
+    gap: 0.75rem;
+  }
+
+  &__card {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+
+  &__input {
+    width: 100%;
+    height: 2.25rem;
+    background: url();
+    box-sizing: border-box;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+    outline: none;
+    padding-left: 0.3rem;
+
+    &::placeholder {
+      @include placeholder-style;
+      color: $secondary-slategray;
     }
 
-    &__container {
-        display: flex;
-        flex-direction: column;
-        gap: 0.75rem;
-    }
-
-    &__card {
-        display: flex;
-        flex-direction: column;
-        gap: 0.5rem;
-    }
-  
-    &__input {
-      width: 100%;
-      height: 2.25rem;
-      background: url();
-      box-sizing: border-box;
-      border-radius: 4px;
-      border: 1px solid #ccc;
+    &:focus {
+      border: 1px solid $primary-Peachcrayon;
       outline: none;
-      padding-left: 0.3rem;
-  
-      &::placeholder {
-          @include placeholder-style;
-          color: $secondary-slategray;
-        }
-    
-        &:focus {
-          border: 1px solid $primary-Peachcrayon;
-          outline: none;
-        }
     }
   }
+}
