--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -10,8 +10,12 @@
   justify-content: space-between;
   align-items: center;
 
+  @include tablet {
+    padding: 1rem 2rem;
+  }
+
   @include desktop {
-    padding: 1rem 5rem;
+    padding: 1rem 4rem;
   }
 
   &__name {
