--- a/src/components/PortfolioWork/PortfolioWork.scss
+++ b/src/components/PortfolioWork/PortfolioWork.scss
@@ -15,23 +15,60 @@
     @include tablet {
       padding: 1.5rem;
     }
+
+    @include desktop {
+      padding: 3rem 2rem;
+    }
   }
 
   &__container {
     display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding-top: 3rem;
     border-top: 1px solid $primary-CharcoalBlue;
-    padding: 2rem 0;
+
+    @include tablet {
+      flex-direction: row;
+      gap: 1.5rem;
+      padding-top: 4rem;
+    }
+
+    @include desktop {
+      gap: 2rem;
+      flex-direction: row;
+      padding-top: 5rem;
+    }
   }
 
   &__card {
+    height: 100%;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    gap: 0.5rem;
+
+    @include desktop {
+      height: 80%;
+    }
   }
 
   &__img {
     box-sizing: border-box;
-    width: 50%;
-    height: 100%;
+    width: 13rem;
+    object-fit: cover;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.3);
+
+    @include tablet {
+      height: 18rem;
+      border-top-left-radius: 50%;
+    }
+
+    @include desktop {
+      width: 23rem;
+      height: 30rem;
+      border-top-left-radius: 60%;
+    }
   }
 }
