--- a/src/pages/EditPortfolioPage/EditPortfolioPage.scss
+++ b/src/pages/EditPortfolioPage/EditPortfolioPage.scss
@@ -5,6 +5,15 @@
 
 .editPortfolio {
     &__title{
-        padding: 1rem 2rem 0 2rem;
+        color: $primary-CharcoalBlue;
+        padding: 1rem 1.5rem 0 1.5rem;
+
+        @include tablet {
+            padding: 1.5rem 3rem 0 3rem;
+        }
+
+        @include desktop {
+            padding: 2rem 4.5rem 0 4.5rem;
+        }
     }
 }
