--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -5,9 +5,29 @@
 
 .homepage {
   &__header {
-    height: 100vh;
     background-image: url(../../assets/images/b-jason-leung-UMncYEfO9-U-unsplash.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+  }
+
+  &__logo {
+    display: none;
+
+    @include tablet {
+      width: 30rem;
+      height: 15rem;
+      box-sizing: border-box;
+      display: flex;
+      padding-top: 2.5rem;
+      margin: auto;
+    }
+
+    @include desktop {
+      width: 40rem;
+      height: 20rem;
+      box-sizing: border-box;
+      display: flex;
+      margin: auto;
+    }
   }
 }
