--- a/src/components/RegistrationForm/RegistrationForm.scss
+++ b/src/components/RegistrationForm/RegistrationForm.scss
@@ -34,6 +34,7 @@
   }
 
   &__input {
+    color: $primary-Timberwolf;
     width: 100%;
     height: 2.25rem;
     background: url();
@@ -41,7 +42,7 @@
     border-radius: 4px;
     border: 1px solid #ccc;
     outline: none;
-    padding-left: 0.3rem;
+    padding-left: 0.5rem;
 
     &::placeholder {
       @include placeholder-style;
