--- a/src/pages/DashboardPage/DashboardPage.scss
+++ b/src/pages/DashboardPage/DashboardPage.scss
@@ -9,7 +9,19 @@
   flex-direction: column;
   gap: 1rem;
   padding: 2rem;
-  background: url(../../assets/images/b-sumner-mahaffey-7Y0NshQLohk-unsplash.jpg);
+
+  @include tablet {
+    padding: 2.5rem;
+  }
+
+  @include desktop {
+    padding: 4rem;
+  }
+
+  &__wrapper {
+    background: url(../../assets/images/b-alex-shutin-kKvQJ6rK6S4-unsplash.jpg);
+    background-size: cover;
+  }
 
   &__container {
     width: 100%;
@@ -17,6 +29,20 @@
     gap: 1rem;
     flex-direction: column;
     justify-content: center;
+
+    @include tablet {
+      width: 90%;
+      margin-left: auto;
+      margin-right: auto;
+      gap: 1.5rem;
+    }
+
+    @include desktop {
+      width: 80%;
+      margin-left: auto;
+      margin-right: auto;
+      gap: 1.5rem;
+    }
   }
 
   &__card {
@@ -35,6 +61,18 @@
     display: flex;
     flex-direction: column;
     gap: 0.2rem;
+
+    @include tablet {
+      flex-direction: row;
+      gap: 0.5rem;
+      align-items: center;
+    }
+
+    @include desktop {
+      flex-direction: row;
+      gap: 0.5rem;
+      align-items: center;
+    }
   }
 
   &__hero {
@@ -50,11 +88,11 @@
 
   &__img {
     box-sizing: border-box;
-    width: 15rem;
+    width: 11rem;
     display: flex;
     position: absolute;
-    top: -60px;
-    right: -55px;
+    top: -11px;
+    right: -16px;
   }
 
   &__title {
@@ -71,7 +109,6 @@
 
   &__reset {
     width: auto;
-    // min-width: 4.4375rem;
     height: 2rem;
     color: $secondary-deer;
     padding: 0.2rem 1rem;
