--- a/src/pages/LogInPage/LogInPage.scss
+++ b/src/pages/LogInPage/LogInPage.scss
@@ -5,7 +5,7 @@
 
 .login {
   height: 100vh;
-  background-image: url(../../assets/images/b-pawel-czerwinski-prMn9KINLtI-unsplash.jpg);
+  background-image: url(../../assets/images/b-jason-leung-UMncYEfO9-U-unsplash.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   padding: 2rem;
@@ -22,28 +22,28 @@
   }
 
   &__container {
-    width: 100%;
-    background: rgba(255, 255, 255, 0.3);
+    width: 60%;
+    background: rgba(0, 0, 0, 0.6);
     text-align: center;
     display: flex;
     flex-direction: column;
     position: relative;
     gap: 1rem;
-    padding: 2rem 1.875rem;
+    padding: 1.25rem 1.875rem;
     border-radius: 15px;
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    box-shadow: 0 4px 30px rgba(255, 255, 255, 0.3);
+    border: 1px solid rgba(0, 0, 0, 0.4);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.5);
     backdrop-filter: blur(10px);
 
     @include tablet {
       width: 38%;
-      padding: 4rem 3rem;
+      padding: 2rem 3rem 2rem 3rem;
       left: 3rem;
     }
 
     @include desktop {
       width: 30%;
-      padding: 5rem 4rem;
+      padding: 4rem 3rem 4rem 3rem;
       left: 7rem;
     }
   }
