--- a/src/pages/SignUpPage/SignUpPage.scss
+++ b/src/pages/SignUpPage/SignUpPage.scss
@@ -6,19 +6,39 @@
 .registration {
   width: 100%;
   height: 100vh;
-  background-image: url(../../assets/images/b-pawel-czerwinski-BFxnx0UHVGM-unsplash.jpg);
+  background-image: url(../../assets/images/b-jason-leung-UMncYEfO9-U-unsplash.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 2rem;
 
   @include tablet {
-    justify-content: flex-start;
+    padding: 2.5rem;
+    flex-direction: row-reverse;
+    justify-content: flex-end
   }
 
   @include desktop {
-    justify-content: flex-start;
+    padding: 4rem 6rem;
+    flex-direction: row-reverse;
+    justify-content: flex-end;
+  }
+
+  &__logo {
+    box-sizing: border-box;
+    width: 10rem;
+    height: 100%;
+
+    @include tablet {
+      width: 20rem;
+    }
+
+    @include desktop {
+      width: 40rem;
+    }
   }
 
   &__wrapper {
@@ -38,13 +58,11 @@
     @include tablet {
       width: 38%;
       padding: 2rem 3rem 2rem 3rem;
-      left: 3rem;
     }
 
     @include desktop {
       width: 30%;
       padding: 4rem 3rem 4rem 3rem;
-      left: 7rem;
     }
   }
 
