--- a/src/styles/partials/_globals.scss
+++ b/src/styles/partials/_globals.scss
@@ -3,7 +3,7 @@
 @use "../partials/typography" as *;
 
 body {
-  font-family: "Montserrat";
+  font-family: "Montserrat", "Arial", "Helvetica", "Sans-Serif";
   font-weight: 400;
 }
 
