--- a/src/components/PortfolioGallery/PortfolioGallery.scss
+++ b/src/components/PortfolioGallery/PortfolioGallery.scss
@@ -34,38 +34,36 @@
       filter: grayscale(0%);
     }
   }
+}
 
-  &__modal {
-    display: none;
-    position: fixed;
-    z-index: 500;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0, 0, 0, 0.5); /* Black background with opacity */
+.modal {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
 
-    &--close {
-      color: #aaaaaa;
-      float: right;
-      font-size: 28px;
-      font-weight: bold;
+.modal-content {
+  position: relative;
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+}
 
-      &:hover,
-      &:focus {
-        color: #000;
-        text-decoration: none;
-        cursor: pointer;
-      }
-    }
-  }
+.modal-content img {
+  max-width: 100%;
+  height: 50rem;
+}
 
-  &__content {
-    width: 80%;
-    background-color: #fefefe;
-    padding: 20px;
-    border: 1px solid #888;
-    margin: auto;
-  }
+.close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 24px;
+  cursor: pointer;
 }
