restyled some component in the login page for all media queries

--- a/src/pages/LogInPage/LogInPage.scss
+++ b/src/pages/LogInPage/LogInPage.scss
@@ -56,8 +56,17 @@
 
   &__subcard {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     gap: 0.5rem;
+
+    @include tablet {
+      flex-direction: row;
+    }
+
+    @include desktop {
+      flex-direction: row;
+    }
   }
 
   &__header,
