added a feature section in the homepage

--- a/src/components/HomePageHero/HomePageHero.scss
+++ b/src/components/HomePageHero/HomePageHero.scss
@@ -9,11 +9,11 @@
   justify-content: center;
 
   @include tablet {
-    padding: 2rem;
+    padding: 2rem 4rem 4rem 4rem;
   }
 
   @include desktop {
-    padding: 4rem;
+    padding: 4rem 4rem 6rem 4rem;
     margin: auto;
   }
 
