--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -14,8 +14,8 @@
     display: none;
 
     @include tablet {
-      width: 30rem;
-      height: 15rem;
+      width: 20rem;
+      height: 100%;
       box-sizing: border-box;
       display: flex;
       padding-top: 2.5rem;
@@ -23,10 +23,11 @@
     }
 
     @include desktop {
-      width: 40rem;
-      height: 20rem;
+      width: 25rem;
+      height: 100%;
       box-sizing: border-box;
       display: flex;
+      padding-top: 5rem;
       margin: auto;
     }
   }
