removed height properties for some components

--- a/src/pages/DashboardPage/DashboardPage.scss
+++ b/src/pages/DashboardPage/DashboardPage.scss
@@ -4,7 +4,7 @@
 @use "../../styles/partials/typography" as *;
 
 .dashboard {
-  height: 100vh;
+  // height: 100vh;
   display: flex;
   flex-direction: column;
   gap: 1rem;
