--- a/src/pages/SignUpPage/SignUpPage.scss
+++ b/src/pages/SignUpPage/SignUpPage.scss
@@ -5,7 +5,7 @@
 
 .registration {
   width: 100%;
-  height: 100vh;
+  // height: 100vh;
   background-image: url(../../assets/images/b-jason-leung-UMncYEfO9-U-unsplash.jpg);
   background-repeat: no-repeat;
   background-size: cover;
